--- a/style.css
+++ b/style.css
@@ -122,7 +122,7 @@ nav{
 .shadow{
     box-shadow: 0 4px 4px -2px rgba(0,0,0,.2);
      }
-@media screen and (min-width: 1820px) {
+@media screen and (min-width: 1900px) {
     
  .s{
     padding-left: 0%; 
@@ -177,7 +177,23 @@ nav{
     right: 10px;  
     width: 110%; 
 }
+}
 
-
- 
+@media screen and (max-width: 600px) {
+    
+    .s{
+       padding-left: 8%; 
+       padding-right: 0%;
+    } 
+    .img{
+        left: -45px;
+       background: url(imgs/Logo.svg);
+       background-size: 100% 100%;
+       width: 233.3px;
+       height: 52.31px;
+       margin: auto;
+    }
+    .tt{
+        margin-top: 50px;
+    }
 }
