--- a/style.css
+++ b/style.css
@@ -182,7 +182,7 @@ nav{
 @media screen and (max-width: 600px) {
 
     body{
-        overflow: hidden;
+        overflow-y: hidden;
     }
     
     .s{
