--- a/style.css
+++ b/style.css
@@ -117,67 +117,197 @@ nav{
     color: #3D3B6C;
     opacity: 1;
 }
+div.column.one{
+    margin: auto;
+}
 
 
 .shadow{
     box-shadow: 0 4px 4px -2px rgba(0,0,0,.2);
      }
 @media screen and (min-width: 1900px) {
-    
- .s{
-    padding-left: 0%; 
-    padding-right: 0%;
- } 
- .img{
-     left: -50px;
+
+
+.navbar{
+    width: 100%;
+    padding: 0;
+    margin:0;
+    height: 81px;
+}
+
+div.container.aa{
+    padding: 0;
+    margin-left: 173px;
+    margin-right: 0;
+    right: 00%;
+}
+
+a.navbar-item.img{
     background: url(imgs/Logo.svg);
     background-size: 100% 100%;
     width: 233.3px;
-    height: 52.31px;
+    height: 81.31px;
+    margin: 0;
     margin: auto;
 }
-nav{
-    height: 81px;
-    width: 100%;
-    box-shadow: 0 4px 4px -2px rgba(0,0,0,.2);
-}
-.navbar-start a{
-    left: -30px;
-    margin-top: 5px;
-    text-align: left;
-    font-size: 22.8px;
+
+a.navbar-item.a{
+    margin-top: 8px;
+    font-size: 20px;
     font-weight: 500;
-    letter-spacing: 0px;
-    color: #3D3B6C;
-    opacity: 1;
 }
-.t{
-    text-align: left;
-    width: 659px;
+
+div.buttons{
+    position: absolute;
+    right: 174px;
+    top: 20px;
+
+}
+
+a.button.is-small.is-primary{
+    font-size: 19px;
+    font-weight: 500;
+    height: 40px;
+    width: 113px;
+    border-radius: 4px;
+}
+
+section.section.main{
+    height: 484px;
+    width: 1804px;
+    margin: 57px;
+    margin-bottom: 0px;
+}
+
+div.container.bb{
+    margin-right: 00;
+    padding: 00;
+    float: left;
+    max-width: 1804px;
+}
+
+div.columns.s.is-variable.is-8{
+    padding: 0%;
+}
+
+div.column.one {
+    margin-left: 121px;
+    margin-top: 121px;
+    width: auto;
+    padding-right: 0px;
+    padding-left: 0;
+}
+
+h1.title{
+    width: 800px;
+    height: 115px;
     font-size: 44px;
-    letter-spacing: 0px;
-    color: #3D3B6C;
-    opacity: 1;
-    padding-bottom: 20px;
 }
 
-.st{
+h2.subtitle{
     width: 659px;
-    text-align: left;
-    font-size: 22;
+    height: 115px;
     font-weight: 500;
-    letter-spacing: 0px;
-    color: #3D3B6C;
-    opacity: 1;
+    font-size: 22px;
+}
+
+div.column.two {
+    padding: none;
+    margin-left: 100px;    
+    margin-top: 54px;
+    width: auto;
+    height: 400px;
+}
+img.i{
+    width: 640px;
+    height: 400px;
+}
+
+section.section.shadow{ 
+    box-shadow: none;
+    padding: 0px;
+    height: 484px;
+    width: 1804px;
+    margin: 45px;
+
+    margin-bottom: 0px;
+    margin-top: -12px;
+    }
+
+    div.container.cc{
+        margin-right: 00;
+        padding: 00;
+        float: left;
+        max-width: 1804px;
+    }
+    div.column.twoo {
+        padding: none;
+        margin-left: 200px;    
+        margin-top: 57px;
+        width: 592px;
+        height: 400px;
+    }
+    div.column.onee {
+        margin-left: 132px;
+        margin-top: 124px;
+        width: auto;
+        padding-right: 0px;
+        padding-left: 0;
+    }
+    h1.titlee{
+        width: 500px;
+        height: 60px;
+        font-size: 44px;
+    }
+    
+    h2.subtitlee{
+        width: 750px;
+        height: 390px;
+        font-weight: 500;
+        font-size: 22px;
+    }
 }
 
 
-.columns.is-variable.is-8 {
-    left: 10px;
-    right: 10px;  
-    width: 110%; 
-}
-}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 @media screen and (max-width: 900px) {
 
